# NoyxEngine

./: .gitattributes  .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml
Noyx/: CMakeLists.txt  Noyx.cpp  Noyx.h
Noyx/include/core/containers/: Array.hpp  StaticArray.hpp  XArray.hpp  XMemory.hpp  dynamic_array.hpp  flat_hash_map.hpp  hash_map_core.hpp  policy_traits.hpp  static_array.hpp  xmap.hpp
Noyx/include/core/containers/Iterators/: iterators.hpp
Noyx/include/core/containers/details/: container_internals.hpp
Noyx/include/core/interfaces/: iface_memory_manager.h
Noyx/include/core/memory/: MemorySystem.h  PhysicalFrameManager.hpp  VMASpaceManager.hpp  central_memory_manager.hpp  guards.hpp  uninitialized.hpp  vma_manager.hpp  vma_space_manager.hpp
Noyx/include/core/memory/allocators/: AllocatorTraits.hpp  allocator_traits.hpp
Noyx/include/core/platform/: Platform.hpp  Typedef.hpp  xmemory.hpp
Noyx/include/core/utility/: macros.hpp  utility.hpp
Noyx/include/core/xstl/: type_traits.hpp
Noyx/include/core/xstl/core/: xstldef.hpp
Noyx/include/core/xstl/type_traits/:  is_constant_evaluated.hpp  add_const.hpp  add_cv.hpp  add_lvalue_reference.hpp  add_pointer.hpp  add_rvalue_reference.hpp  add_volatile.hpp  addressof.hpp  class_of_member.hpp  common_reference.hpp  common_reference_with.hpp  common_type.hpp  conditional.hpp  conjunction.hpp  convertible_to.hpp  copy_cv.hpp  copy_cv_ref.hpp  copy_reference.hpp  decay.hpp  declval.hpp  derived_from.hpp  disjunction.hpp  enable_if.hpp  equality_comparable.hpp  extent.hpp  floating_point.hpp  forward.hpp  has_post_decrement.hpp  has_post_increment.hpp  has_pre_decrement.hpp  has_pre_increment.hpp  has_right_shift.hpp  has_right_shift_assign.hpp  has_trivial_assign.hpp  has_trivial_default_constructor.hpp  has_trivial_destructor.hpp  has_trivial_move_assign.hpp  has_trivial_move_constructor.hpp  has_unary_minus.hpp  has_unary_plus.hpp  (+76 more)
Noyx/source/: CMakeLists.txt  Noyx.cpp
Noyx/source/core/: CMakeLists.txt
Noyx/source/core/diagnostic/: Logger.cpp
Noyx/source/core/memory/: VMASpaceManager.cpp  vma_space_manager.cpp
Noyx/source/core/platform/: Platform.cpp
Noyx/source/platform/: CMakeLists.txt
Noyx/source/render/: CMakeLists.txt
Noyx/source/render/render_DX12/: CMakeLists.txt
Noyx/source/render/render_vulkan/: CMakeLists.txt
abi/: CoreABI.h  ModuleABI.h
api/: module_abi.h
include/containers/: TFlatMap.hpp  THeapArray.hpp  TStaticArray.hpp
include/containers/internal/: containers_interal.hpp  containers_internal.hpp  containers_traits.hpp  containers_utility.hpp
include/containers/internal/impl/: containers_internal-inl.hpp
include/containers/internal/inline/: containers_internal-inl.hpp
include/memory/allocators/: traits.hpp
include/platform/: arch.hpp  assert.hpp  debug.hpp  os.hpp  utils.hpp
source/: CMakeLists.txt  main.cpp
source/containers/: foo.cpp
source/containers/internal/: containers_internal.cpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt
tests/core/containers/: CMakeLists.txt
tests/core/containers/source/: StaticArray.cpp  TStaticArray_test.cpp  dynamic_array_test.cpp  static_array_test.cpp
tests/core/xstl/: CmakeLists.txt
tests/core/xstl/type_traits_tests/: CMakeLists.txt
tests/core/xstl/type_traits_tests/source/: add_const_test.cpp  add_cv_test.cpp  add_pointer_test.cpp  add_rlvalue_reference_test.cpp  add_volatile_test.cpp  class_of_member_test.cpp  common_reference_test.cpp  common_type_test.cpp  conditional_test.cpp  conjunction_test.cpp  convertible_to_test.cpp  copy_cv_ref_test.cpp  copy_cv_test.cpp  copy_reference_test.cpp  decay_test.cpp  disjunction_test.cpp  enable_if_test.cpp  extent_test.cpp  has_pos_increment_test.cpp  has_post_decrement_test.cpp  has_post_increment_test.cpp  has_pre_decrement_test.cpp  has_pre_increment_test.cpp  has_right_shift_assign_test.cpp  has_right_shift_test.cpp  has_trivial_default_constructor_test.cpp  has_trivial_destructor_test.cpp  has_trivial_move_assign_test.cpp  has_trivial_move_constructor_test.cpp  has_unary_minus_test.cpp  has_unary_plus_test.cpp  has_virtual_destructor_test.cpp  index_sequence_test.cpp  integral_constant_test.cpp  is_abstract_test.cpp  is_aggregate_test.cpp  is_arithmetic_test.cpp  is_array_test.cpp  is_assignable_test.cpp  is_base_of_test.cpp  (+50 more)
tests/core/xstl/type_traits_tests/test_includes/: tt_test.hpp  tt_test_detail.hpp  tt_test_sufixes.hpp
tests/test_framework/: test_main.cpp
tests/test_framework/include/: makros.hpp  test_registry.hpp  testing_system.hpp  testings_data.hpp  tests_details.h  tests_details.hpp
tests/tests_details/: test_details.hpp  test_main.cpp
tests/tests_details/include/: tests_details.hpp
